TypeSql/Parsing/Generated/TypeSqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g 2012-12-13 18:17:20

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  TypeSql.Parsing 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
internal partial class TypeSqlParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANY", "DIGIT", "ID", "INPUT_TOKEN", "NEWLINE", "OUTPUT_TOKEN", "SQL", "WHITESPACE", "':'", "'@'", "'['", "']'"
	};
	public const int EOF=-1;
	public const int T__12=12;
	public const int T__13=13;
	public const int T__14=14;
	public const int T__15=15;
	public const int ANY=4;
	public const int DIGIT=5;
	public const int ID=6;
	public const int INPUT_TOKEN=7;
	public const int NEWLINE=8;
	public const int OUTPUT_TOKEN=9;
	public const int SQL=10;
	public const int WHITESPACE=11;

	public TypeSqlParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public TypeSqlParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TypeSqlParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_sql();
	partial void LeaveRule_sql();

	// $ANTLR start "sql"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:21:8: public sql : ( token )* -> ^( SQL ( token )* ) ;
	[GrammarRule("sql")]
	public AstParserRuleReturnScope<object, IToken> sql()
	{
		EnterRule_sql();
		EnterRule("sql", 1);
		TraceIn("sql", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> token1 = default(AstParserRuleReturnScope<object, IToken>);

		RewriteRuleSubtreeStream stream_token=new RewriteRuleSubtreeStream(adaptor,"rule token");
		try { DebugEnterRule(GrammarFileName, "sql");
		DebugLocation(21, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:21:12: ( ( token )* -> ^( SQL ( token )* ) )
			DebugEnterAlt(1);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:21:14: ( token )*
			{
			DebugLocation(21, 14);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:21:14: ( token )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if (((LA1_0>=ANY && LA1_0<=15)))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:21:14: token
					{
					DebugLocation(21, 14);
					PushFollow(Follow._token_in_sql69);
					token1=token();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_token.Add(token1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }



			{
			// AST REWRITE
			// elements: token
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 21:21: -> ^( SQL ( token )* )
			{
				DebugLocation(21, 24);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:21:24: ^( SQL ( token )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(21, 26);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(SQL, "SQL"), root_1);

				DebugLocation(21, 30);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:21:30: ( token )*
				while ( stream_token.HasNext )
				{
					DebugLocation(21, 30);
					adaptor.AddChild(root_1, stream_token.NextTree());

				}
				stream_token.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("sql", 1);
			LeaveRule("sql", 1);
			LeaveRule_sql();
		}
		DebugLocation(22, 1);
		} finally { DebugExitRule(GrammarFileName, "sql"); }
		return retval;

	}
	// $ANTLR end "sql"

	partial void EnterRule_token();
	partial void LeaveRule_token();

	// $ANTLR start "token"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:24:1: token : ( outputToken | ( '@' ID ':' )=> inputToken | . );
	[GrammarRule("token")]
	private AstParserRuleReturnScope<object, IToken> token()
	{
		EnterRule_token();
		EnterRule("token", 2);
		TraceIn("token", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken wildcard4 = default(IToken);
		AstParserRuleReturnScope<object, IToken> outputToken2 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> inputToken3 = default(AstParserRuleReturnScope<object, IToken>);

		object wildcard4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "token");
		DebugLocation(24, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:24:8: ( outputToken | ( '@' ID ':' )=> inputToken | . )
			int alt2=3;
			try { DebugEnterDecision(2, false);
			switch (input.LA(1))
			{
			case ID:
				{
				int LA2_1 = input.LA(2);

				if ((LA2_1==12))
				{
					int LA2_5 = input.LA(3);

					if ((LA2_5==ID))
					{
						alt2 = 1;
					}
					else if ((LA2_5==EOF||(LA2_5>=ANY && LA2_5<=DIGIT)||(LA2_5>=INPUT_TOKEN && LA2_5<=15)))
					{
						alt2 = 3;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 2, 5, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA2_1==EOF||(LA2_1>=ANY && LA2_1<=WHITESPACE)||(LA2_1>=13 && LA2_1<=15)))
				{
					alt2 = 3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 1, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 14:
				{
				int LA2_2 = input.LA(2);

				if ((LA2_2==ID))
				{
					int LA2_6 = input.LA(3);

					if ((LA2_6==15))
					{
						int LA2_9 = input.LA(4);

						if ((LA2_9==12))
						{
							int LA2_11 = input.LA(5);

							if ((LA2_11==ID))
							{
								alt2 = 1;
							}
							else if ((LA2_11==EOF||(LA2_11>=ANY && LA2_11<=DIGIT)||(LA2_11>=INPUT_TOKEN && LA2_11<=15)))
							{
								alt2 = 3;
							}
							else
							{
								if (state.backtracking>0) {state.failed=true; return retval;}
								NoViableAltException nvae = new NoViableAltException("", 2, 11, input);
								DebugRecognitionException(nvae);
								throw nvae;
							}
						}
						else if ((LA2_9==EOF||(LA2_9>=ANY && LA2_9<=WHITESPACE)||(LA2_9>=13 && LA2_9<=15)))
						{
							alt2 = 3;
						}
						else
						{
							if (state.backtracking>0) {state.failed=true; return retval;}
							NoViableAltException nvae = new NoViableAltException("", 2, 9, input);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}
					else if ((LA2_6==EOF||(LA2_6>=ANY && LA2_6<=14)))
					{
						alt2 = 3;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 2, 6, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA2_2==EOF||(LA2_2>=ANY && LA2_2<=DIGIT)||(LA2_2>=INPUT_TOKEN && LA2_2<=15)))
				{
					alt2 = 3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 2, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 13:
				{
				int LA2_3 = input.LA(2);

				if ((LA2_3==ID))
				{
					int LA2_7 = input.LA(3);

					if ((LA2_7==12))
					{
						int LA2_10 = input.LA(4);

						if ((LA2_10==ID))
						{
							int LA2_12 = input.LA(5);

							if ((EvaluatePredicate(synpred1_TypeSql_fragment)))
							{
								alt2 = 2;
							}
							else if ((true))
							{
								alt2 = 3;
							}
							else
							{
								if (state.backtracking>0) {state.failed=true; return retval;}
								NoViableAltException nvae = new NoViableAltException("", 2, 12, input);
								DebugRecognitionException(nvae);
								throw nvae;
							}
						}
						else if ((LA2_10==EOF||(LA2_10>=ANY && LA2_10<=DIGIT)||(LA2_10>=INPUT_TOKEN && LA2_10<=15)))
						{
							alt2 = 3;
						}
						else
						{
							if (state.backtracking>0) {state.failed=true; return retval;}
							NoViableAltException nvae = new NoViableAltException("", 2, 10, input);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}
					else if ((LA2_7==EOF||(LA2_7>=ANY && LA2_7<=WHITESPACE)||(LA2_7>=13 && LA2_7<=15)))
					{
						alt2 = 3;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 2, 7, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA2_3==EOF||(LA2_3>=ANY && LA2_3<=DIGIT)||(LA2_3>=INPUT_TOKEN && LA2_3<=15)))
				{
					alt2 = 3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 3, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case ANY:
			case DIGIT:
			case INPUT_TOKEN:
			case NEWLINE:
			case OUTPUT_TOKEN:
			case SQL:
			case WHITESPACE:
			case 12:
			case 15:
				{
				alt2 = 3;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:24:11: outputToken
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(24, 11);
				PushFollow(Follow._outputToken_in_token91);
				outputToken2=outputToken();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, outputToken2.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:25:5: ( '@' ID ':' )=> inputToken
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(25, 21);
				PushFollow(Follow._inputToken_in_token107);
				inputToken3=inputToken();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, inputToken3.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:26:5: .
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(26, 5);

				wildcard4=(IToken)input.LT(1);

				MatchAny(input); if (state.failed) return retval;
				if (state.backtracking == 0) {
				wildcard4_tree = (object)adaptor.Create(wildcard4);
				adaptor.AddChild(root_0, wildcard4_tree);
				}


				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("token", 2);
			LeaveRule("token", 2);
			LeaveRule_token();
		}
		DebugLocation(27, 1);
		} finally { DebugExitRule(GrammarFileName, "token"); }
		return retval;

	}
	// $ANTLR end "token"

	partial void EnterRule_outputToken();
	partial void LeaveRule_outputToken();

	// $ANTLR start "outputToken"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:29:1: outputToken : ( ( ID ':' )=>id= ID ':' type= ID -> ^( OUTPUT_TOKEN $id $type) | ( '[' ID ']' )=> '[' id= ID ']' ':' type= ID -> ^( OUTPUT_TOKEN $id $type) );
	[GrammarRule("outputToken")]
	private AstParserRuleReturnScope<object, IToken> outputToken()
	{
		EnterRule_outputToken();
		EnterRule("outputToken", 3);
		TraceIn("outputToken", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken id = default(IToken);
		IToken type = default(IToken);
		IToken char_literal5 = default(IToken);
		IToken char_literal6 = default(IToken);
		IToken char_literal7 = default(IToken);
		IToken char_literal8 = default(IToken);

		object id_tree = default(object);
		object type_tree = default(object);
		object char_literal5_tree = default(object);
		object char_literal6_tree = default(object);
		object char_literal7_tree = default(object);
		object char_literal8_tree = default(object);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_15=new RewriteRuleITokenStream(adaptor,"token 15");
		RewriteRuleITokenStream stream_14=new RewriteRuleITokenStream(adaptor,"token 14");
		RewriteRuleITokenStream stream_12=new RewriteRuleITokenStream(adaptor,"token 12");
		try { DebugEnterRule(GrammarFileName, "outputToken");
		DebugLocation(29, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:30:2: ( ( ID ':' )=>id= ID ':' type= ID -> ^( OUTPUT_TOKEN $id $type) | ( '[' ID ']' )=> '[' id= ID ']' ':' type= ID -> ^( OUTPUT_TOKEN $id $type) )
			int alt3=2;
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);

			if ((LA3_0==ID) && (EvaluatePredicate(synpred2_TypeSql_fragment)))
			{
				alt3 = 1;
			}
			else if ((LA3_0==14) && (EvaluatePredicate(synpred3_TypeSql_fragment)))
			{
				alt3 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:30:4: ( ID ':' )=>id= ID ':' type= ID
				{
				DebugLocation(30, 17);
				id=(IToken)Match(input,ID,Follow._ID_in_outputToken136); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_ID.Add(id);

				DebugLocation(30, 21);
				char_literal5=(IToken)Match(input,12,Follow._12_in_outputToken138); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_12.Add(char_literal5);

				DebugLocation(30, 29);
				type=(IToken)Match(input,ID,Follow._ID_in_outputToken142); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_ID.Add(type);



				{
				// AST REWRITE
				// elements: type, id
				// token labels: id, type
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleITokenStream stream_id=new RewriteRuleITokenStream(adaptor,"token id",id);
				RewriteRuleITokenStream stream_type=new RewriteRuleITokenStream(adaptor,"token type",type);
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 30:33: -> ^( OUTPUT_TOKEN $id $type)
				{
					DebugLocation(30, 36);
					// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:30:36: ^( OUTPUT_TOKEN $id $type)
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(30, 38);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(OUTPUT_TOKEN, "OUTPUT_TOKEN"), root_1);

					DebugLocation(30, 52);
					adaptor.AddChild(root_1, stream_id.NextNode());
					DebugLocation(30, 56);
					adaptor.AddChild(root_1, stream_type.NextNode());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:31:4: ( '[' ID ']' )=> '[' id= ID ']' ':' type= ID
				{
				DebugLocation(31, 18);
				char_literal6=(IToken)Match(input,14,Follow._14_in_outputToken167); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_14.Add(char_literal6);

				DebugLocation(31, 24);
				id=(IToken)Match(input,ID,Follow._ID_in_outputToken171); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_ID.Add(id);

				DebugLocation(31, 28);
				char_literal7=(IToken)Match(input,15,Follow._15_in_outputToken173); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_15.Add(char_literal7);

				DebugLocation(31, 32);
				char_literal8=(IToken)Match(input,12,Follow._12_in_outputToken175); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_12.Add(char_literal8);

				DebugLocation(31, 40);
				type=(IToken)Match(input,ID,Follow._ID_in_outputToken179); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_ID.Add(type);



				{
				// AST REWRITE
				// elements: type, id
				// token labels: id, type
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleITokenStream stream_id=new RewriteRuleITokenStream(adaptor,"token id",id);
				RewriteRuleITokenStream stream_type=new RewriteRuleITokenStream(adaptor,"token type",type);
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 31:44: -> ^( OUTPUT_TOKEN $id $type)
				{
					DebugLocation(31, 47);
					// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:31:47: ^( OUTPUT_TOKEN $id $type)
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(31, 49);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(OUTPUT_TOKEN, "OUTPUT_TOKEN"), root_1);

					DebugLocation(31, 63);
					adaptor.AddChild(root_1, stream_id.NextNode());
					DebugLocation(31, 67);
					adaptor.AddChild(root_1, stream_type.NextNode());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
				}

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("outputToken", 3);
			LeaveRule("outputToken", 3);
			LeaveRule_outputToken();
		}
		DebugLocation(32, 1);
		} finally { DebugExitRule(GrammarFileName, "outputToken"); }
		return retval;

	}
	// $ANTLR end "outputToken"

	partial void EnterRule_inputToken();
	partial void LeaveRule_inputToken();

	// $ANTLR start "inputToken"
	// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:34:1: inputToken : '@' id= ID ':' type= ID -> ^( INPUT_TOKEN $id $type) ;
	[GrammarRule("inputToken")]
	private AstParserRuleReturnScope<object, IToken> inputToken()
	{
		EnterRule_inputToken();
		EnterRule("inputToken", 4);
		TraceIn("inputToken", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken id = default(IToken);
		IToken type = default(IToken);
		IToken char_literal9 = default(IToken);
		IToken char_literal10 = default(IToken);

		object id_tree = default(object);
		object type_tree = default(object);
		object char_literal9_tree = default(object);
		object char_literal10_tree = default(object);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_13=new RewriteRuleITokenStream(adaptor,"token 13");
		RewriteRuleITokenStream stream_12=new RewriteRuleITokenStream(adaptor,"token 12");
		try { DebugEnterRule(GrammarFileName, "inputToken");
		DebugLocation(34, 1);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:35:2: ( '@' id= ID ':' type= ID -> ^( INPUT_TOKEN $id $type) )
			DebugEnterAlt(1);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:35:5: '@' id= ID ':' type= ID
			{
			DebugLocation(35, 5);
			char_literal9=(IToken)Match(input,13,Follow._13_in_inputToken204); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_13.Add(char_literal9);

			DebugLocation(35, 11);
			id=(IToken)Match(input,ID,Follow._ID_in_inputToken208); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_ID.Add(id);

			DebugLocation(35, 15);
			char_literal10=(IToken)Match(input,12,Follow._12_in_inputToken210); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_12.Add(char_literal10);

			DebugLocation(35, 23);
			type=(IToken)Match(input,ID,Follow._ID_in_inputToken214); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_ID.Add(type);



			{
			// AST REWRITE
			// elements: type, id
			// token labels: id, type
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleITokenStream stream_id=new RewriteRuleITokenStream(adaptor,"token id",id);
			RewriteRuleITokenStream stream_type=new RewriteRuleITokenStream(adaptor,"token type",type);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 35:27: -> ^( INPUT_TOKEN $id $type)
			{
				DebugLocation(35, 30);
				// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:35:30: ^( INPUT_TOKEN $id $type)
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(35, 32);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(INPUT_TOKEN, "INPUT_TOKEN"), root_1);

				DebugLocation(35, 45);
				adaptor.AddChild(root_1, stream_id.NextNode());
				DebugLocation(35, 49);
				adaptor.AddChild(root_1, stream_type.NextNode());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("inputToken", 4);
			LeaveRule("inputToken", 4);
			LeaveRule_inputToken();
		}
		DebugLocation(36, 1);
		} finally { DebugExitRule(GrammarFileName, "inputToken"); }
		return retval;

	}
	// $ANTLR end "inputToken"

	partial void EnterRule_synpred1_TypeSql_fragment();
	partial void LeaveRule_synpred1_TypeSql_fragment();

	// $ANTLR start synpred1_TypeSql
	public void synpred1_TypeSql_fragment()
	{
		EnterRule_synpred1_TypeSql_fragment();
		EnterRule("synpred1_TypeSql_fragment", 5);
		TraceIn("synpred1_TypeSql_fragment", 5);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:25:5: ( '@' ID ':' )
			DebugEnterAlt(1);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:25:6: '@' ID ':'
			{
			DebugLocation(25, 6);
			Match(input,13,Follow._13_in_synpred1_TypeSql98); if (state.failed) return;
			DebugLocation(25, 10);
			Match(input,ID,Follow._ID_in_synpred1_TypeSql100); if (state.failed) return;
			DebugLocation(25, 13);
			Match(input,12,Follow._12_in_synpred1_TypeSql102); if (state.failed) return;

			}

		}
		finally
		{
			TraceOut("synpred1_TypeSql_fragment", 5);
			LeaveRule("synpred1_TypeSql_fragment", 5);
			LeaveRule_synpred1_TypeSql_fragment();
		}
	}
	// $ANTLR end synpred1_TypeSql

	partial void EnterRule_synpred2_TypeSql_fragment();
	partial void LeaveRule_synpred2_TypeSql_fragment();

	// $ANTLR start synpred2_TypeSql
	public void synpred2_TypeSql_fragment()
	{
		EnterRule_synpred2_TypeSql_fragment();
		EnterRule("synpred2_TypeSql_fragment", 6);
		TraceIn("synpred2_TypeSql_fragment", 6);
		try
		{
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:30:4: ( ID ':' )
			DebugEnterAlt(1);
			// C:\\Users\\mjr\\src\\TypeSql\\TypeSql\\Parsing\\ANTLR\\TypeSql.g:30:5: ID ':'
			{
			DebugLocation(30, 5);
			Match(input,ID,Follow._ID_in_synpred2_TypeSql128); if (state.failed) return;
			DebugLocation(30, 8);
			Match(input,12,Follow._12_in_synpred2_TypeSql130); if (state.failed) return;

			}

		}
		finally
		{
			TraceOut("synpred2_TypeSql_fragment", 6);
